--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@skynexui/components": "^1.24.3",
-    "next": "^12.0.10",
+    "@supabase/supabase-js": "^1.35.4",
+    "next": "^12.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
